syntax = "proto3";

option java_package = "com.ecommerce.grpc.inventory";
option java_outer_classname = "InventoryProto";
option java_multiple_files = true;

package ecommerce.inventory;

import "common.proto";

service InventoryService {
  rpc CheckInventory(CheckInventoryRequest) returns (CheckInventoryResponse);
  rpc CheckInventoryBatch(CheckInventoryBatchRequest) returns (CheckInventoryBatchResponse);
}

message CheckInventoryRequest {
  string product_id = 1;
  int32 quantity = 2;
  ecommerce.common.Metadata metadata = 3;
  optional ProductInfo product_info = 4;
}

message ProductInfo {
  string inventory_status = 1;  // "available", "out_of_stock", "upcoming", ""
  string name = 2;
  double price = 3;
}

message CheckInventoryResponse {
  string product_id = 1;
  bool available = 2;
  int32 available_quantity = 3;
  string status = 4;
  ecommerce.common.Status result_status = 5;
  double latency_ms = 6;
}

message CheckInventoryBatchRequest {
  repeated InventoryItem items = 1;
  ecommerce.common.Metadata metadata = 2;
}

message CheckInventoryBatchResponse {
  repeated InventoryStatus items = 1;
  ecommerce.common.Status result_status = 2;
  double latency_ms = 3;
}

message InventoryItem {
  string product_id = 1;
  int32 quantity = 2;
}

message InventoryStatus {
  string product_id = 1;
  bool available = 2;
  int32 available_quantity = 3;
  int32 reserved_quantity = 4;
  string status = 5;
  string error_message = 6;
}